Mise en page des dieux de l'olympe

--- a/index.html
+++ b/index.html
@@ -93,21 +93,19 @@
         <section id="personnages2">
             <h2>Les Dieux de L'Olympe</h2>
             <figure class="container flex">
-                <div class="w30"><img src="img/Athena.png" alt="">
-                <button>ATHENA</button></div>
-                <div class="w30"><img src="img/Zeus.png" alt="">
-                <button>ZEUS</button></div>
-                <div class="w30"><img src="img/Artemis.png" alt="">
-                <button>ARTHEMIS</button></div>
-                <div class="w30"><img src="img/Demeter.png" alt="">
-                <button>DEMETHER</button></div>
-                <div class="w30"><img src="img/Poseidon.png" alt="">
-                <button>POSEIDON</button></div>
                 <div class="w30">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laudantium magni
-                placeat tempore. Beatae omnis asperiores velit esse odio rem sequi doloremque repellat hic numquam, consequatur iste
-                id iusto commodi?</p>
-                <button>ARES</button></div>
+                <h4>ATHENA</h4></div>
+                <div class="w30">
+                <h4>ZEUS</h4></div>
+                <div class="w30">
+                <h4>ARTHEMIS</h4></div>
+                <div class="w30">
+                <h4>DEMETHER</h4></div>
+                <div class="w30">
+                <h4>POSEIDON</h4></div>
+                <div class="w30">
+                <p>Ares est le Dieu de la guerre de l'Olympe. Contrairement à Athéna, plus stratégique, le domaine d'Arès est celui des aspects physiques, violents et indomptables de la guerre.</p>
+                <h4>ARES</h4></div>
             </figure>
     </footer>
 
